[metadata]
name = quantum_psi
version = 0.1-dev1
author = Samuel Huff Dieterich
author_email = samuel.dieterich@ufrgs.br
description = Conjunto de ferramentas para estudo de funções de onda na física quântica.
long_description = file: README.md
long_description_content_type = text/markdown
license = 
url = https://github.com/pypa/sampleproject
project_urls =
    Source = https://github.com/SamuelHDieterich/Psi.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scipy

[options.packages.find]
where = src